Cursor animation added

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -77,12 +77,59 @@ a:not([href]):not([tabindex]):hover {
 }
 
 
+/* Cursor animation */
+
+.content p {
+    width: 700px;
+    line-height: 26px;
+    font-size: 18px;
+    text-align: justify;
+}
+
+.cursor {
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    border: 1px solid #c6c6c6;
+    border-radius: 50%;
+    left: 0;
+    top: 0;
+    pointer-events: none;
+    transform: translate(-50%, -50%);
+    transition: .1s;
+}
+
+.cursor2 {
+    position: fixed;
+    width: 8px;
+    height: 8px;
+    background-color: #c6c6c6;
+    border-radius: 50%;
+    left: 0;
+    top: 0;
+    pointer-events: none;
+    transform: translate(-50%, -50%);
+    transition: .15s;
+}
+
+.content:hover~.cursor {
+    transform: translate(-50%, -50%) scale(1.5);
+    background-color: #c6c6c6;
+    opacity: .5;
+}
+
+.content:hover~.cursor2 {
+    opacity: 0;
+}
+
+
 /* ==========================================================================
    Section Title
    ========================================================================== */
 
 .section {
     padding: 130px 0px;
+    margin-top: 42px;
 }
 
 .form-control:focus {
@@ -178,8 +225,8 @@ a:not([href]):not([tabindex]):hover {
 
 .btn-border-filled {
     cursor: pointer;
-    background-color: #3ecf8e;
-    border: 1px solid #3ecf8e;
+    background-color: #CE262F;
+    border: 1px solid #CE262F;
     color: #fff;
     box-shadow: 0px 8px 9px 0px rgba(96, 94, 94, 0.17);
     width: 180px;
@@ -436,8 +483,8 @@ button:focus {
 }
 
 .menu-bg {
-    background: #5533ff;
-    background: linear-gradient(95deg, #5533ff 40%, #383CC1 100%) !important;
+    background: #000;
+    background: linear-gradient(95deg, #000 40%, #000 100%) !important;
     box-shadow: 0 0 7px 1px rgba(0, 0, 0, 0.1);
     z-index: 9999;
     padding: 5px;
@@ -548,15 +595,15 @@ button:focus {
     height: 100%;
     top: 0px;
     left: 0px;
-    background: #5533ff;
-    background: linear-gradient(95deg, #120E43 40%, #E6425E 100%);
-    -webkit-transform: skewY(-12deg);
-    transform: skewY(-12deg);
+    background: transparent;
+    background: linear-gradient(95deg, #000 40%, #000 100%);
     -webkit-transform-origin: 0;
     transform-origin: 0;
     z-index: -12;
 }
 
+
+/* 
 .hero-area .overlay :nth-child(1) {
     width: 33.33333%;
     width: calc(100% / 2);
@@ -578,7 +625,7 @@ button:focus {
     position: absolute;
     height: 155px;
     left: 3%;
-}
+} */
 
 .hero-area .contents {
     padding: 220px 0;
@@ -609,7 +656,7 @@ button:focus {
 
 .hero-area .contents .btn-border {
     border: 1px solid #fff;
-    color: #3ecf8e !important;
+    color: #CE262F !important;
     -webkit-box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
     box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
     width: 180px;
@@ -620,7 +667,7 @@ button:focus {
 
 .hero-area .contents .btn-border:hover {
     background: #fff;
-    color: #3ecf8e;
+    color: #CE262F;
 }
 
 .hero-area .intro-img {
@@ -647,7 +694,7 @@ button:focus {
 }
 
 #services .services-item:hover {
-    border: 1px solid #3ecf8e;
+    border: 1px solid #CE262F;
     box-shadow: 0px 0px 25px 0px rgba(95, 95, 95, 0.24);
     -moz-transition: all .4s ease;
     -webkit-transition: all .4s ease;
@@ -655,7 +702,7 @@ button:focus {
 }
 
 #services .services-item .icon {
-    background: #e3fff2;
+    background: #CE262F;
     width: 110px;
     height: 110px;
     margin: 0px auto;
@@ -669,7 +716,7 @@ button:focus {
 
 #services .services-item .icon i {
     font-size: 40px;
-    color: #3ecf8e;
+    color: #fff;
     position: absolute;
     left: 0;
     right: 0;
@@ -968,8 +1015,8 @@ button:focus {
 }
 
 #showcase .gradient-bg {
-    background: #5533ff;
-    background: linear-gradient(95deg, #5533ff 40%, #25ddf5 100%);
+    background: #000;
+    background: linear-gradient(95deg, #000 40%, #000 100%);
     padding: 119px 0px 80px 0px;
 }
 
@@ -1811,7 +1858,7 @@ button:focus {
 
 #footer-Content {
     padding-top: 130px;
-    background: #180e29;
+    background: #000;
 }
 
 #footer-Content .footer-logo img {
