--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -12,32 +12,32 @@
     <title>Contact us - thedot</title>
 </head>
 
-<body>
+<body style="background-color: black;">
     <div class="container p-lg-5">
         <div class="p-lg-5 px-2">
             <form action="/postcontact" method="POST">
                 <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Name</label>
+                    <label for="exampleInputEmail1" class="form-label" style="color: whitesmoke;">Name</label>
                     <input name="name" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
 
                 </div>
                 <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Phone Number</label>
+                    <label for="exampleInputEmail1" class="form-label" style="color: whitesmoke;">Phone Number</label>
                     <input name="phone" type="number" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
 
                 </div>
                 <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Company Name</label>
+                    <label for="exampleInputEmail1" class="form-label" style="color: whitesmoke;">Company Name</label>
                     <input name="cname" type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
 
                 </div>
                 <div class="mb-3">
-                    <label for="exampleInputEmail1" class="form-label">Email address</label>
+                    <label for="exampleInputEmail1" class="form-label" style="color: whitesmoke;">Email address</label>
                     <input name="email" type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                     <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
                 </div>
                 <div class="mb-3">
-                    <label for="exampleInputPassword1" class="form-label">Country</label>
+                    <label for="exampleInputPassword1" class="form-label" style="color: whitesmoke;">Country</label>
                     <input name="country" type="text" class="form-control" id="exampleInputPassword1">
                 </div>
 
@@ -45,7 +45,7 @@
                     <textarea name="idea" class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
                     <label for="floatingTextarea2">About your idea</label>
                 </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary btn-lg btn-block">Submit</button>
             </form>
         </div>
 
