--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -12,7 +12,7 @@
     <title>Contact us - thedot</title>
 </head>
 
-<body style="background-color: black;">
+<body style="background-color: black; padding: 10%;">
     <div class="container p-lg-5">
         <div class="p-lg-5 px-2">
             <form action="/postcontact" method="POST">
@@ -45,7 +45,8 @@
                     <textarea name="idea" class="form-control" placeholder="Leave a comment here" id="floatingTextarea2" style="height: 100px"></textarea>
                     <label for="floatingTextarea2">About your idea</label>
                 </div>
-                <button type="submit" class="btn btn-primary btn-lg btn-block">Submit</button>
+                <br/>
+                <button type="submit" class="ml-auto btn btn-primary btn-lg btn-block">Submit</button>
             </form>
         </div>
 
